[package]
name = "cross-dbus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.5"

[package.metadata.cross.target.x86_64-pc-windows-gnu]
pre-build = [
    "apt-get update",
    "apt-get install -y libdbus-1-dev pkg-config libdbus-1-3",
]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update",
    "apt-get install -y libdbus-1-dev pkg-config libdbus-1-3",
]
